# microbit_burn_test

./: Cargo.toml  README.md
.cargo/: config
src/: conv.rs  main.rs  model.rs
